# dspy-play

dspylab-01/: .gitignore  README.md  pyproject.toml
dspylab-01/docs/examples/: preference_validator.yaml
dspylab-01/docs/implementation/: ExperimentTrackingProposal.md  Implementation.md  LLMCostBudgetingImplementation.md  LLMCostBudgetingProposal.md  Requirements.md  ToDo.md
dspylab-01/programs/preferencevalidator/: preference_validator.yaml
dspylab-01/programs/preferencevalidator/01/: preference_validator.yaml  program.py
dspylab-01/programs/preferencevalidator/01/data/: preferencevalidatordataset.jsonl
dspylab-01/programs/preferencevalidator/01/results/: raw.jsonl  summary.json
dspylab-01/tests/: test_cli.py  test_config_loader.py  test_config_models.py  test_costs_budget.py  test_costs_tracker.py  test_metrics_timing.py  test_pricing_catalog.py  test_pricing_manager.py  test_program_loader.py  test_runtime_dspy.py  test_runtime_executor.py
